--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/postgres": "^0.5.1",
     "fuse.js": "^7.0.0",
     "next": "14.0.4",
     "react": "^18",
