--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "^0.20.0",
     "@vercel/postgres": "^0.5.1",
     "fuse.js": "^7.0.0",
     "next": "14.0.4",
+    "next-auth": "^5.0.0-beta.4",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -19,6 +21,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "nodemailer": "^6.9.8",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   }
