--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/core": "^0.20.0",
     "@vercel/postgres": "^0.5.1",
     "fuse.js": "^7.0.0",
+    "howlongtobeat": "^1.8.0",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.4",
     "react": "^18",
